feat: creado endpoint para eliminar tarifa
